--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,10 @@
   <title>Adminpro</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="google-signin-client_id" content="412714738437-qv0827bfroeji7qsbinf8tm0jo9f5dqg.apps.googleusercontent.com">
+  <script src="https://apis.google.com/js/platform.js"></script>
+
   <meta name="description" content="">
   <meta name="author" content="">
   <!-- Favicon icon -->
